[gd_scene load_steps=45 format=3 uid="uid://dr05s80b3knfg"]

[ext_resource type="PackedScene" uid="uid://dch6y6iihywuc" path="res://game/zones/base_zone.tscn" id="1_nuuje"]
[ext_resource type="PackedScene" uid="uid://dhs3gl5f3kt70" path="res://assets/models/zones/oceanside_cliff/oceanside_cliff.blend" id="2_imggn"]
[ext_resource type="Script" path="res://game/zones/oceanside_cliff/oceanside_cliff.gd" id="2_rsluq"]
[ext_resource type="PackedScene" uid="uid://dyim60sb7emag" path="res://game/zones/oceanside_cliff/characters/casey_adult.tscn" id="3_qb4xw"]
[ext_resource type="PackedScene" uid="uid://dxhe52ll666ph" path="res://assets/models/zones/oceanside_cliff/car2.blend" id="4_5y54i"]
[ext_resource type="PackedScene" uid="uid://borlciqi2jb8d" path="res://game/zones/oceanside_cliff/characters/pat_adult.tscn" id="4_28525"]
[ext_resource type="AudioStream" uid="uid://d1j776o4wica0" path="res://assets/audio/dialog/oceanside_cliff/dialog_1/mc.wav" id="5_vpxv0"]
[ext_resource type="AudioStream" uid="uid://b8i8le84stg44" path="res://assets/audio/dialog/oceanside_cliff/dialog_1/casey.wav" id="6_5jix5"]
[ext_resource type="AudioStream" uid="uid://olacq2vh0aaj" path="res://assets/audio/dialog/oceanside_cliff/dialog_2/mc.wav" id="7_dc513"]
[ext_resource type="AudioStream" uid="uid://bo3ibuig8h71u" path="res://assets/audio/dialog/oceanside_cliff/dialog_2/casey.wav" id="8_nivfq"]
[ext_resource type="PackedScene" uid="uid://ce7vysyvondf8" path="res://addons/godot-xr-tools/objects/snap_zone.tscn" id="9_f7dux"]
[ext_resource type="AudioStream" uid="uid://cgvo48ciuyn1f" path="res://assets/audio/dialog/oceanside_cliff/dialog_2/pat.wav" id="9_g8vv1"]
[ext_resource type="AudioStream" uid="uid://dr4wgbk763sfb" path="res://assets/audio/sfx/oceanside_cliff/rock_splash.wav" id="10_gubfe"]
[ext_resource type="AudioStream" uid="uid://oywrovl0h8cn" path="res://assets/audio/dialog/oceanside_cliff/dialog_3/casey.wav" id="10_r464l"]
[ext_resource type="PackedScene" uid="uid://c0gj4rj4vbqlb" path="res://game/components/highlight/highlight_component.tscn" id="11_630s3"]
[ext_resource type="PackedScene" uid="uid://bf2kbu7miiq4s" path="res://game/components/key_item/key_items/car_keys.tscn" id="11_fttws"]
[ext_resource type="AudioStream" uid="uid://c3hikav2pg5jw" path="res://assets/audio/dialog/oceanside_cliff/dialog_3/pat.wav" id="11_ns5nt"]
[ext_resource type="AudioStream" uid="uid://8n31f36cmci0" path="res://assets/audio/dialog/oceanside_cliff/dialog_3/mc.wav" id="12_4yifc"]
[ext_resource type="AudioStream" uid="uid://cpmveogcfx8vi" path="res://assets/audio/dialog/oceanside_cliff/dialog_4/mc.wav" id="13_2v36o"]
[ext_resource type="AudioStream" uid="uid://2nkqd1iqiqxk" path="res://assets/audio/dialog/oceanside_cliff/dialog_4/casey.wav" id="14_cmgek"]
[ext_resource type="AudioStream" uid="uid://cxjtf1vhlfa50" path="res://assets/audio/dialog/oceanside_cliff/dialog_4/pat.wav" id="15_mv3lj"]
[ext_resource type="AudioStream" uid="uid://dva57bikli0cm" path="res://assets/audio/dialog/oceanside_cliff/dialog_5/mc.wav" id="16_3udhl"]
[ext_resource type="AudioStream" uid="uid://p82sfllnakwh" path="res://assets/audio/dialog/oceanside_cliff/dialog_5/casey.wav" id="17_xhqed"]
[ext_resource type="AudioStream" uid="uid://lni4sgfp4fo5" path="res://assets/audio/dialog/oceanside_cliff/dialog_6/mc.wav" id="18_qowyc"]
[ext_resource type="AudioStream" uid="uid://bx5851l780be2" path="res://assets/audio/dialog/oceanside_cliff/dialog_6/casey.wav" id="19_1hj4w"]
[ext_resource type="AudioStream" uid="uid://wugr684s4jpa" path="res://assets/audio/dialog/oceanside_cliff/dialog_7/mc.wav" id="20_bjh6j"]
[ext_resource type="AudioStream" uid="uid://dlqnkxpcga507" path="res://assets/audio/dialog/oceanside_cliff/dialog_7/pat.wav" id="21_fqrab"]
[ext_resource type="PackedScene" uid="uid://csn7ms2b32vqb" path="res://assets/models/zones/oceanside_cliff/car.blend" id="22_v47eq"]
[ext_resource type="PackedScene" uid="uid://ekua77ard05a" path="res://game/zones/oceanside_cliff/interactables/rock.tscn" id="24_eo00y"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2qeww"]
sky_top_color = Color(0.576471, 0.54902, 0.803922, 1)
sky_horizon_color = Color(0.827451, 0.494118, 0.384314, 1)
ground_bottom_color = Color(0.258824, 0.411765, 0.505882, 1)
ground_horizon_color = Color(0.341176, 0.458824, 0.54902, 1)

[sub_resource type="Sky" id="Sky_i4ejo"]
sky_material = SubResource("ProceduralSkyMaterial_2qeww")

[sub_resource type="Environment" id="Environment_aj2lf"]
background_mode = 2
sky = SubResource("Sky_i4ejo")
tonemap_mode = 2
sdfgi_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g8e7c"]
albedo_color = Color(0.00392157, 0.482353, 0.572549, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_1fhlk"]
material = SubResource("StandardMaterial3D_g8e7c")
size = Vector2(5000, 5000)

[sub_resource type="BoxShape3D" id="BoxShape3D_h2dm3"]
size = Vector3(104.965, 10, 100)

[sub_resource type="Animation" id="Animation_a7ns3"]
length = 0.001

[sub_resource type="Animation" id="Animation_wqdpa"]
resource_name = "dialog_1"
length = 4.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XROrigin3D/XRCamera3D/MCDialog")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_vpxv0")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Characters/CaseyAdult/Mouth/CaseyDialog")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_5jix5")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_jyj2x"]
resource_name = "dialog_2"
length = 76.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XROrigin3D/XRCamera3D/MCDialog")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_dc513")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Characters/CaseyAdult/Mouth/CaseyDialog")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_nivfq")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Characters/PatAdult/Mouth/PatDialog")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_g8vv1")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Characters/CaseyAdult/AnimationTree:parameters/MotionToKeys/request")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(13.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_v1qqn"]
resource_name = "dialog_3"
length = 15.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Characters/CaseyAdult/Mouth/CaseyDialog")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_r464l")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Characters/PatAdult/Mouth/PatDialog")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_ns5nt")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("XROrigin3D/XRCamera3D/MCDialog")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("12_4yifc")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_fd8da"]
resource_name = "dialog_4"
length = 19.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XROrigin3D/XRCamera3D/MCDialog")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("13_2v36o")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Characters/CaseyAdult/Mouth/CaseyDialog")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("14_cmgek")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Characters/PatAdult/Mouth/PatDialog")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("15_mv3lj")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Characters/PatAdult/AnimationTree:parameters/State/transition_request")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(17.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hand_over"]
}

[sub_resource type="Animation" id="Animation_qetie"]
resource_name = "dialog_5"
length = 7.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XROrigin3D/XRCamera3D/MCDialog")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("16_3udhl")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Characters/CaseyAdult/Mouth/CaseyDialog")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("17_xhqed")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Characters/PatAdult/AnimationTree:parameters/State/transition_request")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}

[sub_resource type="Animation" id="Animation_f061d"]
resource_name = "dialog_6"
length = 9.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XROrigin3D/XRCamera3D/MCDialog")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("18_qowyc")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Characters/CaseyAdult/Mouth/CaseyDialog")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("19_1hj4w")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_y6d35"]
resource_name = "dialog_7"
length = 5.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XROrigin3D/XRCamera3D/MCDialog")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("20_bjh6j")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Characters/PatAdult/Mouth/PatDialog")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("21_fqrab")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6rk42"]
_data = {
"RESET": SubResource("Animation_a7ns3"),
"dialog_1": SubResource("Animation_wqdpa"),
"dialog_2": SubResource("Animation_jyj2x"),
"dialog_3": SubResource("Animation_v1qqn"),
"dialog_4": SubResource("Animation_fd8da"),
"dialog_5": SubResource("Animation_qetie"),
"dialog_6": SubResource("Animation_f061d"),
"dialog_7": SubResource("Animation_y6d35")
}

[node name="OceansideCliff" instance=ExtResource("1_nuuje")]
script = ExtResource("2_rsluq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." index="0"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_color = Color(0.792157, 0.788235, 0.494118, 1)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="1"]
environment = SubResource("Environment_aj2lf")

[node name="XROrigin3D" parent="." index="2"]
transform = Transform3D(-0.0876075, 0, -0.996155, 0, 1, 0, 0.996155, 0, -0.0876075, 4.48066, 14.5091, 7.15095)

[node name="MCDialog" parent="XROrigin3D/XRCamera3D" index="0"]
stream = null

[node name="Models" type="Node3D" parent="." index="3"]

[node name="oceanside_cliff" parent="Models" index="0" instance=ExtResource("2_imggn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 223.152, 0, 146.158)

[node name="StaticBody3D" parent="Models/oceanside_cliff/Plane_015" index="0"]
transform = Transform3D(1, -5.96046e-08, 0, 0, 1, 0, -8.88178e-16, 1.73195e-14, 1, 0, 0, 0)
collision_layer = 2049

[node name="StaticBody3D" parent="Models/oceanside_cliff/parking circle" index="0"]
collision_layer = 2049

[node name="car" parent="Models" index="1" instance=ExtResource("22_v47eq")]
transform = Transform3D(-0.864433, 0, -0.502748, 0, 1, 0, 0.502748, 0, -0.864433, -18.0936, 15.5636, 13.6581)

[node name="HighlightComponent" parent="Models/car/KeyHole" index="0" node_paths=PackedStringArray("parent_mesh") instance=ExtResource("11_630s3")]
parent_mesh = NodePath("..")

[node name="SnapZone" parent="Models/car/KeyHole" index="1" instance=ExtResource("9_f7dux")]
transform = Transform3D(1, 0, 0, 0, 0.691563, 0.722316, 0, -0.722316, 0.691563, 0, -14.6679, 0.00834274)
snap_require = "car_keys"

[node name="car2" parent="Models" index="2" instance=ExtResource("4_5y54i")]
transform = Transform3D(-0.993745, 0, -0.111677, 0, 1, 0, 0.111677, 0, -0.993745, -22.4114, 15.5636, 13.6054)

[node name="Ocean" type="MeshInstance3D" parent="Models" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.39987, 0)
mesh = SubResource("PlaneMesh_1fhlk")
skeleton = NodePath("../..")

[node name="Characters" type="Node3D" parent="." index="4"]

[node name="CaseyAdult" parent="Characters" index="0" node_paths=PackedStringArray("player") instance=ExtResource("3_qb4xw")]
transform = Transform3D(0.280415, 0, 0.959879, 0, 1, 0, -0.959879, 0, 0.280415, 2.86788, 14.5313, 9.18865)
velocity = Vector3(0, 0, 0)
look_at_player = true
player = NodePath("../../XROrigin3D/PlayerBody")

[node name="GeneralSkeleton" parent="Characters/CaseyAdult/character_youngadult_male2/character_rig_youngadult_male" index="0"]
bones/0/rotation = Quaternion(1.26881e-08, 0, 0, 1)
bones/9/position = Vector3(0, 0.941215, -0.040592)
bones/9/rotation = Quaternion(1.39129e-07, 1.35482e-14, 6.17573e-15, 1)
bones/10/rotation = Quaternion(7.04249e-10, 5.35186e-15, 3.38685e-16, 1)
bones/11/rotation = Quaternion(0.5, 0.5, 0.5, -0.5)
bones/12/rotation = Quaternion(0.00933758, 0.999932, -6.45369e-05, -0.00699328)
bones/13/rotation = Quaternion(1.42878e-05, -0.707117, 1.22226e-06, 0.707096)
bones/14/rotation = Quaternion(-0.00666262, 0.702124, -0.00655823, 0.711993)
bones/15/rotation = Quaternion(-2.98023e-08, -2.98023e-08, 2.98023e-08, 1)
bones/16/rotation = Quaternion(-7.45058e-08, 2.98023e-08, -1.49012e-08, 1)
bones/17/rotation = Quaternion(-2.98023e-08, 2.98023e-08, 2.98023e-08, 1)
bones/18/rotation = Quaternion(2.98023e-08, -2.98023e-08, -2.98023e-08, 1)
bones/19/rotation = Quaternion(-2.98023e-08, -2.98023e-08, -2.98023e-08, 1)
bones/20/rotation = Quaternion(5.96046e-08, 0, 0, 1)
bones/21/rotation = Quaternion(-0.214187, 0.673887, 0.214187, 0.673887)
bones/22/rotation = Quaternion(-8.66804e-10, 1.96695e-08, -3.37568e-08, 1)
bones/23/rotation = Quaternion(-3.65832e-09, -4.37989e-15, 1.13323e-15, 1)
bones/24/rotation = Quaternion(-4.41596e-09, 9.20112e-15, 2.96331e-16, 1)
bones/26/rotation = Quaternion(-0.00934586, 0.999932, -7.15703e-05, 0.00698249)
bones/27/rotation = Quaternion(-9.6727e-06, 0.7071, 8.42937e-07, 0.707114)
bones/28/rotation = Quaternion(-0.00664941, -0.702114, 0.00655724, 0.712003)
bones/29/rotation = Quaternion(0, -2.98023e-08, -1.49012e-08, 1)
bones/30/rotation = Quaternion(-8.9407e-08, 2.98023e-08, 2.98023e-08, 1)
bones/31/rotation = Quaternion(-2.98023e-08, 2.98023e-08, 2.98023e-08, 1)
bones/32/rotation = Quaternion(0, -2.98023e-08, -1.49012e-08, 1)
bones/34/rotation = Quaternion(5.96046e-08, -5.96046e-08, 0, 1)
bones/35/rotation = Quaternion(-0.214187, -0.673887, -0.214187, 0.673887)
bones/36/rotation = Quaternion(-4.55703e-08, 1.01328e-08, -6.41e-09, 1)
bones/37/rotation = Quaternion(0.00117628, 4.98021e-07, 0.999999, 1.20963e-05)
bones/37/scale = Vector3(1, 1, 1.00002)
bones/38/rotation = Quaternion(-2.8288e-10, 1, 3.55347e-09, -2.76892e-10)
bones/38/scale = Vector3(1, 1, 1)
bones/39/rotation = Quaternion(-0.000823073, 0.707102, -0.707111, -0.000840278)
bones/40/rotation = Quaternion(-0.00117613, 5.01754e-07, 0.999999, -1.20991e-05)
bones/40/scale = Vector3(1, 1, 1.00002)
bones/41/rotation = Quaternion(3.16436e-10, 1, 3.5524e-09, 1.60446e-10)
bones/41/scale = Vector3(1, 1, 1)
bones/42/rotation = Quaternion(0.00082286, 0.707102, -0.707111, 0.000840581)
bones/42/scale = Vector3(1, 0.999993, 1.00001)

[node name="Mouth" parent="Characters/CaseyAdult" index="2"]
transform = Transform3D(0.963463, -0.0253134, -0.266642, -0.00829681, 0.992226, -0.124175, 0.267712, 0.12185, 0.955763, 0.070261, 0.991132, -0.675202)

[node name="PatAdult" parent="Characters" index="1" instance=ExtResource("4_28525")]
transform = Transform3D(0.997253, 0, 0.0740564, 0, 1, 0, -0.0740563, 0, 0.997253, -22.2807, 14.994, 9.84221)
velocity = Vector3(0, 0, 0)
physics_enabled = true

[node name="GeneralSkeleton" parent="Characters/PatAdult/character_youngadult_female2/character_rig_youngadult_female" index="0"]
bones/0/rotation = Quaternion(1.26881e-08, 0, 0, 1)
bones/9/position = Vector3(0, 0.850988, -0.0367007)
bones/9/rotation = Quaternion(1.39129e-07, 1.35482e-14, 6.17573e-15, 1)
bones/10/rotation = Quaternion(7.04249e-10, 5.35186e-15, 3.38685e-16, 1)
bones/11/rotation = Quaternion(0.5, 0.5, 0.5, -0.5)
bones/12/rotation = Quaternion(0.00933758, 0.999932, -6.45369e-05, -0.00699328)
bones/13/rotation = Quaternion(1.42878e-05, -0.707117, 1.22226e-06, 0.707096)
bones/14/rotation = Quaternion(-0.00666262, 0.702124, -0.00655823, 0.711993)
bones/15/rotation = Quaternion(-2.98023e-08, -2.98023e-08, 2.98023e-08, 1)
bones/16/rotation = Quaternion(-7.45058e-08, 2.98023e-08, -1.49012e-08, 1)
bones/17/rotation = Quaternion(-2.98023e-08, 2.98023e-08, 2.98023e-08, 1)
bones/18/rotation = Quaternion(2.98023e-08, -2.98023e-08, -2.98023e-08, 1)
bones/19/rotation = Quaternion(-2.98023e-08, -2.98023e-08, -2.98023e-08, 1)
bones/20/rotation = Quaternion(5.96046e-08, 0, 0, 1)
bones/21/rotation = Quaternion(-0.214187, 0.673887, 0.214187, 0.673887)
bones/22/rotation = Quaternion(-8.66804e-10, 1.96695e-08, -3.37568e-08, 1)
bones/23/rotation = Quaternion(-3.65832e-09, -4.37989e-15, 1.13323e-15, 1)
bones/24/rotation = Quaternion(-4.41596e-09, 9.20112e-15, 2.96331e-16, 1)
bones/26/rotation = Quaternion(-0.00934586, 0.999932, -7.15703e-05, 0.00698249)
bones/27/rotation = Quaternion(-9.6727e-06, 0.7071, 8.42937e-07, 0.707114)
bones/28/rotation = Quaternion(-0.00664941, -0.702114, 0.00655724, 0.712003)
bones/29/rotation = Quaternion(0, -2.98023e-08, -1.49012e-08, 1)
bones/30/rotation = Quaternion(-8.9407e-08, 2.98023e-08, 2.98023e-08, 1)
bones/31/rotation = Quaternion(-2.98023e-08, 2.98023e-08, 2.98023e-08, 1)
bones/32/rotation = Quaternion(0, -2.98023e-08, -1.49012e-08, 1)
bones/34/rotation = Quaternion(5.96046e-08, -5.96046e-08, 0, 1)
bones/35/rotation = Quaternion(-0.214187, -0.673887, -0.214187, 0.673887)
bones/36/rotation = Quaternion(-4.55703e-08, 1.01328e-08, -6.41e-09, 1)
bones/37/rotation = Quaternion(0.00117628, 4.98021e-07, 0.999999, 1.20963e-05)
bones/37/scale = Vector3(1, 1, 1.00002)
bones/38/rotation = Quaternion(-2.8288e-10, 1, 3.55347e-09, -2.76892e-10)
bones/38/scale = Vector3(1, 1, 1)
bones/39/rotation = Quaternion(-0.000823073, 0.707102, -0.707111, -0.000840278)
bones/40/rotation = Quaternion(-0.00117613, 5.01754e-07, 0.999999, -1.20991e-05)
bones/40/scale = Vector3(1, 1, 1.00002)
bones/41/rotation = Quaternion(3.16436e-10, 1, 3.5524e-09, 1.60446e-10)
bones/41/scale = Vector3(1, 1, 1)
bones/42/rotation = Quaternion(0.00082286, 0.707102, -0.707111, 0.000840581)
bones/42/scale = Vector3(1, 0.999993, 1.00001)

[node name="character_youngadult_female" parent="Characters/PatAdult/character_youngadult_female2/character_rig_youngadult_female/GeneralSkeleton" index="0"]
surface_material_override/1 = null

[node name="Mouth" parent="Characters/PatAdult" index="2"]
transform = Transform3D(0.960146, 0.00894409, -0.279355, -0.101192, 0.942806, -0.317611, 0.260537, 0.333222, 0.906137, 0.00329018, 1.26772, -0.156138)

[node name="PatDialog" parent="Characters/PatAdult/Mouth" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0160913, 0.00362396, 0.247843)

[node name="RightHand" parent="Characters/PatAdult" index="3"]
transform = Transform3D(0.613067, -0.238678, 0.753115, 0.704005, 0.597628, -0.383689, -0.358505, 0.765424, 0.534416, -0.136728, 0.874353, 0.0309849)

[node name="Interactables" type="Node3D" parent="." index="5"]

[node name="Rock" parent="Interactables" index="0" instance=ExtResource("24_eo00y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.69649, 14.5403, 5.84734)

[node name="RockSnapZone" parent="Interactables" index="1" instance=ExtResource("9_f7dux")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.69649, 14.5403, 5.84734)
initial_object = NodePath("../Rock")

[node name="CarKeys" parent="Interactables" index="2" instance=ExtResource("11_fttws")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.65724, 14.936, 8.20679)

[node name="RockDetector" type="Area3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.126, -9.4, 12.271)
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="RockDetector" index="0"]
shape = SubResource("BoxShape3D_h2dm3")

[node name="DialogDelay" type="Timer" parent="RockDetector" index="1"]
wait_time = 3.0
one_shot = true

[node name="Markers" type="Node3D" parent="." index="7"]

[node name="Pat1" type="Marker3D" parent="Markers" index="0"]
transform = Transform3D(-0.851882, 0, 0.523734, 0, 1, 0, -0.523734, 0, -0.851882, 3.38881, 14.7323, 10.4642)

[node name="Pat2" type="Marker3D" parent="Markers" index="1"]
transform = Transform3D(-0.0346898, 0, 0.999398, 0, 1, 0, -0.999398, 0, -0.0346898, 3.71322, 14.7323, 7.68695)

[node name="Sounds" type="Node3D" parent="." index="8"]

[node name="RockSplash" type="AudioStreamPlayer3D" parent="Sounds" index="0"]
stream = ExtResource("10_gubfe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="9"]
libraries = {
"": SubResource("AnimationLibrary_6rk42")
}

[connection signal="has_picked_up" from="XROrigin3D/LeftHand/FunctionPickup" to="." method="_on_function_pickup_has_picked_up"]
[connection signal="has_picked_up" from="XROrigin3D/RightHand/FunctionPickup" to="." method="_on_function_pickup_has_picked_up"]
[connection signal="has_picked_up" from="Models/car/KeyHole/SnapZone" to="." method="_on_keys_inserted"]

[editable path="Models/oceanside_cliff"]
[editable path="Models/car"]
[editable path="Characters/CaseyAdult"]
[editable path="Characters/CaseyAdult/character_youngadult_male2"]
[editable path="Characters/PatAdult"]
[editable path="Characters/PatAdult/character_youngadult_female2"]
[editable path="Interactables/Rock"]
[editable path="Interactables/Rock/rock"]
